Version SVN trunk (?)

  * SFZ format engine:
    - added support for <global>, <master> and #define (patch by Alby M)
    - Removed code duplication in SFZ file loading code.
    - Added support for sfz extension opcode 'script' which may be used to
      load real-time instrument script file (NKSP script language).

  * Gigasampler format engine:
    - Fixed clicks and pumping noise with Lowpass Turbo filter on very low
      cutoff settings.

  * general changes:
    - fixed printf type errors (mostly in debug messages)
    - use unique_ptr instead of auto_ptr when building with C++11
    - Added RTAVLTree class which is a real-time safe ordered multi-map, thus
      allowing to sort data efficiently in real-time safe manner.
    - RTList class: added methods for moving/inserting elements to arbitrary
      position within a list.
    - RTList class: added method fromPtr() for creating an Iterator object from
      a raw element pointer.
    - Attempt to partly fix resetting engine channels vs. resetting engine, an
      overall cleanup of the Reset*(), ConnectAudioDevice(),
      DisconnectAudioDevice() API methods would still be desirable though,
      because the current situation is still inconsistent and error prone.
    - Active voices are now internally grouped to "Note" objects, instead of
      being directly assigned to a keyboard key. This allows more fine graded
      processing of voices, which is i.e. required for certain instrument
      script features.
    - Fix: Release trigger voices were not spawned on sustain pedal up
      (CC #64) events.
    - Fix: Release trigger voices can now also distinguish correctly between
      note-off and sustain pedal up events.
    - All engines: Increased ramp speed of volume smoother and pan smoother
      (while slow rate of crossfade smoother is preserved) to allow quick
      volume and pan changes by instrument scripts for instance.