@@ -5,6 +5,7 @@ Version SVN trunk (?)
     - Removed code duplication in SFZ file loading code.
     - Added support for sfz extension opcode 'script' which may be used to
       load real-time instrument script file (NKSP script language).
+    - Implemented opcode set_ccN (initial patch by Giovanni Senatore).
 
   * Gigasampler format engine:
     - Fixed clicks and pumping noise with Lowpass Turbo filter on very low
